cluster/apps/networking-system/ingresses/base/omada-controller/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: omada-controller
  labels:
    app.kubernetes.io/name: omada-controller
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`omada.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: omada-controller-headers
        - name: omada-controller-redirect
        - name: local-only
      services:
        - name: omada-controller
          port: 8043
          namespace: networking-system
          scheme: https
          serversTransport: omada-controller
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
